--- a/index.html
+++ b/index.html
@@ -12,26 +12,13 @@
 
 <body>
 
+<form>
+    Número Uno<input type="text" name="" id="numberOne"><br><br>
+    Número Dos<input type="text" name="" id="numberTwo"><br><br>
+     <input type="button" value="Resultado" onclick="suma()">
 
+</form>
 
 </body>
-<script>
-
-
-    var numberOne = 10;
-    var numberTwo = 2
-    
-    function suma(numberOne, numbertwo) {
-
-        var resultado;
-        resultado = numberOne + numbertwo;
-        return resultado;
-
-    }
-
-    console.log(suma(numberOne, numberTwo))
-
-
-</script>
 
 </html>
