--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <source src="javaScript.js" type="">
+    <script src="javaScript.js"></script>
 </head>
 
 <body>
+    <h1> Hola mUndo Bienvenidos/a</h1>
 
-<form>
-    Número Uno<input type="text" name="" id="numberOne"><br><br>
-    Número Dos<input type="text" name="" id="numberTwo"><br><br>
-     <input type="button" value="Resultado" onclick="suma()">
 
-</form>
 
 </body>
+
 
 </html>
